<resources>

    <string name="app_name">InstagramClone</string>
    <string name="Login">Login</string>
    <string name="Username">username</string>
    <string name="password">password</string>
    <string name="item">Item</string>
    <string name="todo">TODO</string>
    <string name="Logout">Logout</string>
    <string name="caption">description</string>
    <string name="Camera">Take a picture</string>
    <string name="Submit">Post</string>
    <string name="user">username</string>
    <string name="description">description</string>
    <string name="signup">Sign up</string>
    <string name="display">Don\'t have an account?</string>
    <string name="create">Sign up</string>
    <string name="intro">from</string>


</resources>