<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".LoginActivity">


    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/Username"
        app:layout_constraintBottom_toTopOf="@+id/Password"
        app:layout_constraintStart_toStartOf="@+id/Password"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/signup"
        app:layout_constraintEnd_toEndOf="@+id/signup"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nav_logo_whiteout" />

</androidx.constraintlayout.widget.ConstraintLayout>